Add Docker and Nginx configurations, implement entrypoint script, and enhance QR code generation features

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,47 +1,182 @@
+# Nginx Configuration for QR Code Laravel App
 server {
     listen 80;
     server_name localhost;
     root /var/www/html/public;
     index index.php index.html;
 
-    # Increase client max body size for file uploads
+    # Increase client max body size
     client_max_body_size 100M;
+    client_body_timeout 300s;
+    client_header_timeout 300s;
 
-    # Main location block
+    # Enable gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript 
+               application/javascript application/xml+rss 
+               application/json image/svg+xml;
+
+    # Security headers (Global)
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+    # Health check endpoint
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
+    # Main location for web routes
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    # PHP-FPM location block
+    # API-specific location with rate limiting
+    location /api/ {
+        # Rate limiting (100 requests per minute per IP)
+        limit_req zone=api burst=20 nodelay;
+        
+        # Laravel routing
+        try_files $uri $uri/ /index.php?$query_string;
+        
+        # CORS headers for API (optimized)
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept, Authorization, Content-Type, X-Requested-With, X-CSRF-TOKEN' always;
+        add_header 'Access-Control-Expose-Headers' 'Authorization' always;
+        add_header 'Access-Control-Max-Age' 86400 always;
+        
+        # Handle preflight OPTIONS requests
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Accept, Authorization, Content-Type, X-Requested-With, X-CSRF-TOKEN';
+            add_header 'Access-Control-Max-Age' 86400;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+        
+        # API-specific logging
+        access_log /var/log/nginx/api_access.log combined;
+        error_log /var/log/nginx/api_error.log;
+    }
+
+    # Laravel Storage - QR Codes và assets khác
+    location /storage/ {
+        alias /var/www/html/storage/app/public/;
+        
+        # Cache static files
+        expires 1y;
+        add_header Cache-Control "public, immutable";  # ✅ Fixed typo
+        add_header X-Content-Type-Options "nosniff";
+        
+        # Security cho file uploads
+        location ~* \.(php|php[0-9]|phtml|phar)$ {
+            deny all;
+        }
+        
+        # Optional: Add CORS cho static assets nếu cần
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        
+        access_log off;
+        
+        # Try files, fallback to Laravel if needed
+        try_files $uri $uri/ @laravel_storage;
+    }
+
+    # Fallback cho storage files không tìm thấy
+    location @laravel_storage {
+        rewrite ^/storage/(.*)$ /index.php?path=$1 last;
+    }
+
+    # PHP-FPM configuration (optimized)
     location ~ \.php$ {
+        # Security check
+        try_files $uri =404;
+        
         fastcgi_pass php:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
         
-        # Increase timeout for long running scripts
+        # Timeout settings
         fastcgi_read_timeout 300;
         fastcgi_send_timeout 300;
+        fastcgi_connect_timeout 60;
+        
+        # Buffer settings for performance
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
+        
+        # Additional FastCGI params
+        fastcgi_param HTTP_AUTHORIZATION $http_authorization;
+        fastcgi_param HTTPS off;
+        fastcgi_param SERVER_NAME $server_name;
+        
+        # Hide PHP version
+        fastcgi_hide_header X-Powered-By;
     }
 
-    # Security headers
-    location ~ /\.ht {
-        deny all;
-    }
-
-    # Assets caching
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Static assets caching (CSS, JS, Images)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp|woff|woff2|ttf|eot|pdf)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        add_header X-Content-Type-Options "nosniff";
+        access_log off;
+        
+        # Fallback to Laravel if file not found
+        try_files $uri @laravel;
     }
 
-    # Gzip compression
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+    # Fallback cho static assets
+    location @laravel {
+        rewrite ^/(.*)$ /index.php?/$1 last;
+    }
 
-    # Error and access logs
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
+    # Security - deny access to sensitive files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+    
+    location ~ /\.env {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+    
+    location ~ /composer\.(json|lock) {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    location ~ /package\.(json|lock) {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Deny access to storage app directory (security)
+    location ~ ^/storage/app/ {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Global logs với custom format
+    error_log /var/log/nginx/error.log warn;
+    access_log /var/log/nginx/access.log combined;
 }
+
+# Rate limiting zone definition (add to nginx.conf)
+limit_req_zone $binary_remote_addr zone=api:10m rate=100r/m;
