--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,12 @@ version: '3.8'
 services:
   # PHP-FPM 8.4 Service
   php:
-    image: php:8.4-fpm
+    build:
+      context: .
+      dockerfile: docker/php/Dockerfile
+      args:
+        - USER_ID=${USER_ID:-1000}
+        - GROUP_ID=${GROUP_ID:-1000}
     container_name: dev_php
     restart: unless-stopped
     working_dir: /var/www/html
@@ -17,16 +22,6 @@ services:
       - redis
     environment:
       - PHP_INI_SCAN_DIR=/usr/local/etc/php/conf.d:/usr/local/etc/php/custom.d
-    # Install PHP extensions needed for Laravel
-    command: >
-      bash -c "
-      apt-get update && 
-      apt-get install -y git unzip libzip-dev libpng-dev libjpeg-dev libfreetype6-dev && 
-      docker-php-ext-configure gd --with-freetype --with-jpeg && 
-      docker-php-ext-install pdo pdo_mysql zip gd && 
-      pecl install redis && 
-      docker-php-ext-enable redis && 
-      php-fpm"
 
   # Nginx Web Server
   nginx:
@@ -34,8 +29,8 @@ services:
     container_name: dev_nginx
     restart: unless-stopped
     ports:
-      - "8080:80"
-      - "8443:443"
+      - '8080:80'
+      - '8443:443'
     volumes:
       - ./laravel-app:/var/www/html
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
@@ -50,9 +45,26 @@ services:
     container_name: dev_redis
     restart: unless-stopped
     ports:
-      - "6379:6379"
+      - '6379:6379'
     volumes:
       - redis_data:/data
+    networks:
+      - dev_network
+
+  # MySQL Database
+  mysql:
+    image: mysql:8.0
+    container_name: dev_mysql
+    restart: unless-stopped
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root123}
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-laravel_dev}
+      MYSQL_USER: ${MYSQL_USER:-laravel}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:-laravel123}
+    ports:
+      - '3306:3306'
+    volumes:
+      - mysql_data:/var/lib/mysql
     networks:
       - dev_network
 
@@ -63,6 +75,7 @@ services:
     volumes:
       - ./laravel-app:/app
     working_dir: /app
+    entrypoint: ["composer"]
     networks:
       - dev_network
     profiles:
@@ -74,3 +87,6 @@ networks:
 
 volumes:
   redis_data:
+    driver: local
+  mysql_data:
+    driver: local
